Fixed spacing on units and removed field labels.

--- a/kgisteam/courses/static/courses/sass/courses_course.scss
+++ b/kgisteam/courses/static/courses/sass/courses_course.scss
@@ -75,6 +75,10 @@ table.flex-table {
 }
 
 // Worksheets
+.worksheet-answer-units {
+    padding-left: 1ex;
+}
+
 .worksheet-buttons {
     padding: $content-spacer;
 }
